# Demos

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  HelloWorld.rst  README.md  ReadMe.rst  push.sh  tags
ThriftDemo/: CMakeLists.txt  echoclient.cpp  echoserver.cpp
ThriftDemo/thrift/: EchoServer.thrift
ThriftDemo/thrift/gen-cpp/: EchoServer.cpp  EchoServer.h  EchoServer_constants.cpp  EchoServer_types.cpp  EchoServer_types.h  server.cpp  server.h  server_server.skeleton.cpp
cb_tutorial/: boss.config  erl_crash.dump
cb_tutorial/ebin/: cb_tutorial.app
cb_tutorial/log/: console.log.0  console.log.1  crash.log.0  crash.log.1  error.log.0  error.log.1
cb_tutorial/src/: cb_tutorial.app.src
cb_tutorial/src/controller/: cb_tutorial_greeting_controller.erl
cb_tutorial/src/model/: greeting.erl
cocos/Billard/: ReadMe.rst
cocos/Billard/Classes/: GameManager.cpp  GameManager.h
cocos/Billard/proj.win32/: Billard.sln
cocos/Billiard++/Classes/: AppDelegate.cpp  Ball.cpp  Ball.h  Border.cpp  Border.h  Config.h  Desk.cpp  Desk.h  GLHelper.cpp  GLHelper.h  Game.cpp  Game.h  GameLayer.cpp  GameLayer.h  GameManager.cpp  GameManager.h  GameMath.cpp  GameMath.h  Hole.cpp  Hole.h  LayoutHelper.cpp  LayoutHelper.h  MainLayer.cpp  MainLayer.h  Math.h  Player.cpp  Player.h  RollingState.cpp  RollingState.h  State.cpp  State.h
cocos/Billiard++/proj.win32/: Billiard++.sln
cocos/MOF/: MOF.ccs  MOF.cfg  MOF.udf
cocos/MOF/cocosstudio/: FireYellowAnimation.csd  LoadingLayer.csd  LoadingScene.csd  MainScene.csd
cocos/x/: CMakeLists.txt  config.json
elixir/: Elixir.Concat.beam  Elixir.Math.beam  hello.exs  test.ex
elixir/30d/: 01-hello-world.exs  02_unit_test.ex  03_input_output.ex  04_list.ex  05_map.ex  06_record.ex  07_fibonacci.ex  08_process.ex
elixir/hello_phoenix/config/: config.exs
erlang/: day1.erl  day2.erl  day3.erl  hello.es  tr_server.erl
erlang/pe/: afile_client.erl  afile_server.erl  file_client.erl  geometry.erl  misc.erl  my_back.erl  name_server.erl  new_name_server.erl  server1.erl  server2.erl  server3.erl
game/: cmake.html
game/src/: CMakeLists.txt
game/src/ProtocolBuffer/: packet.proto
game/src/ProtocolBuffer/cpp/: packet.pb.cc  packet.pb.h
game/src/UnitTest/: CMakeLists.txt  LoggerTest.cpp  LoggerTest.h  main.cpp
game/src/base/: CMakeLists.txt  Logger.cpp  Logger.h  Node.cpp  Node.h  Singleton.h  State.cpp  State.h  ioservicepool.cpp  log.cpp  log.h  memerypool.hpp
game/src/client/: CMakeLists.txt  client.cpp  client.h  main.cpp
game/src/server/: CMakeLists.txt  connection.cpp  connection.h  main.cpp  server.cpp
libXLLog4j/: CMakeLists.txt  XLLogger.cpp  XLLogger.h
python/: LogAnalyzer.py  LoggingTest.py  TornadoDemo.py  abc_dec_xml.py  analyzer.py  apple_login.py  calender.py  conversion_analyzer.py  daes.py  dec_img_zip.py  dec_swf.py  dec_zip.py  decrypt_byc.py  decrypt_kx.py  decrypt_lyb.py  decrypt_tq.py  decrypt_tq2.py  enc_zip.py  pm_sort.txt  revert_frame.py  revert_ios_png.py  sort_pm.py
python/20140324/: click.log-2014032400  click.log-2014032401  click.log-2014032402  click.log-2014032403  click.log-2014032404  click.log-2014032405  click.log-2014032406  click.log-2014032407  click.log-2014032408  click.log-2014032409  click.log-2014032410  click.log-2014032411  click.log-2014032412  click.log-2014032413  click.log-2014032414  click.log-2014032415  click.log-2014032416  click.log-2014032417  click.log-2014032418  click.log-2014032419  click.log-2014032420  click.log-2014032421  click.log-2014032422  click.log-2014032423  conversion.log-2014032400  conversion.log-2014032401  conversion.log-2014032402  conversion.log-2014032403  conversion.log-2014032404  conversion.log-2014032405  conversion.log-2014032406  conversion.log-2014032407  conversion.log-2014032408  conversion.log-2014032409  conversion.log-2014032410  conversion.log-2014032411  conversion.log-2014032412  conversion.log-2014032413  conversion.log-2014032414  conversion.log-2014032415  (+32 more)
python/TqRes/: Assets.plist
python/abc_assets/: AssetsConfig.json  Pocketmon.fla  Pocketmon.swf
python/cocos/: BattleNum.plist  HelloWorld.py  LoginUI_part1.plist  MainUI.plist  cike-light.plist  cike-nan.plist  cike-nv.plist  config.ini  fashi-light.plist  fashi-nan.plist  fashi-nv.plist  gen_cpp.py  jianshi-avatar.plist  jianshi-light.plist  jianshi-nan.plist  jianshi-nv.plist  revert_texture.py
python/common/: __init__.py  log.py
python/kdygfk/: dec_img.py  dec_xml.py
python/kx/: note.md
python/models/: __init__.py  click.py
python/mof/: decrypt_mof.py  gen_cpp.py  mof-ida.txt
qt/CocosTest/: CocosTest.pro
qt/QtDemos/: QtDemos.pro  customdialog.cpp  customdialog.h  customwidget.cpp  customwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  testdialog.cpp  testdialog.h  testdialog.ui  testform.cpp  testform.h  testform.ui  waitingresdialog.cpp  waitingresdialog.h  waitingresdialog.ui
ruby/demo/: hello.rb
sources/: CMakeLists.txt  tags
sources/ProtocolBuffer/: packet.proto
sources/ProtocolBuffer/cpp/: packet.pb.cc  packet.pb.h
sources/ThriftDemo/: CMakeLists.txt  echoclient.cpp  echoserver.cpp
sources/ThriftDemo/thrift/: EchoServer.thrift
sources/ThriftDemo/thrift/gen-cpp/: EchoServer.cpp  EchoServer.h  EchoServer_constants.h  EchoServer_server.skeleton.cpp  EchoServer_types.cpp  EchoServer_types.h
sources/UnitTest/: CMakeLists.txt  CommonTest.cpp  CommonTest.h  MemeryPoolTest.cpp  MemeryPoolTest.h  SharedPtrTest.cpp  SharedPtrTest.h  XLLoggerTest.cpp  XLLoggerTest.h  main.cpp
sources/boost.asio/: CMakeLists.txt  ioservicepool.cpp  ioservicepool.h  memerypool.hpp
sources/boost.asio/client/: CMakeLists.txt  client.cpp  client.h  main.cpp
sources/boost.asio/server/: CMakeLists.txt  connection.cpp  connection.h  main.cpp  server.cpp  server.h
sources/boost.general/: CDemo.cpp  CDemo.h  CMakeLists.txt  GeneralDemo.cpp
sources/common/: CMakeLists.txt  HttpClient.cpp  HttpClient.h  XLLogger.h  common.cpp  common.h
sources/gtest/: CMakeLists.txt
sources/libXLLog4j/: CMakeLists.txt  XLLogger.cpp  XLLogger.h
(+12444 files in other folders)
